force-app/main/default/objects/B25__Stored_Filter_Set__c/B25__Stored_Filter_Set__c.object-meta.xml
<CustomObject>
    <description>Stores a filter for the Booker25 Lighting filters.</description>
    <label>Stored Filter Set</label>
    <nameField>
        <label>Stored Filter Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stored Filter Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>