force-app/main/default/objects/B25__Stored_Filter_Set__c/fields/B25__Filter_Json__c.field-meta.xml
<CustomField>
    <fullName>B25__Filter_Json__c</fullName>
    <description>Stores the JSON that represents the stored filter set.</description>
    <inlineHelpText>Stocke le JSON qui représente l’ensemble de filtres stockés.</inlineHelpText>
    <label>Filter Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>