force-app/main/default/objects/B25__Stored_Filter_Set__c/fields/B25__Location_Identifier__c.field-meta.xml
<CustomField>
    <fullName>B25__Location_Identifier__c</fullName>
    <description>Stores the identifier that determines on what calendars this filter will be visible.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stocke l’identifiant qui détermine sur quels calendriers ce filtre sera visible.</inlineHelpText>
    <label>Location_Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>