force-app/main/default/objects/B25__Stored_Filter_Set__c/fields/B25__User__c.field-meta.xml
<CustomField>
    <fullName>B25__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user this filter belongs to. When empty the filter is available to all users.</description>
    <inlineHelpText>L’utilisateur auquel appartient ce filtre. Lorsque ce champ est vide, le filtre est disponible pour tous les utilisateurs.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stored_Filter_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>