force-app/main/default/objects/B25__Stored_Filter_Set__c/fields/B25__User_Updateable_Properties__c.field-meta.xml
<CustomField>
    <fullName>B25__User_Updateable_Properties__c</fullName>
    <description>The options that user can edit when loading the global filter. Changes are saved per individual user.</description>
    <inlineHelpText>Les options que l’utilisateur peut modifier lors du chargement du filtre global. Les modifications sont enregistrées par utilisateur individuel.</inlineHelpText>
    <label>User Updateable Properties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operators</fullName>
            </value>
            <value>
                <fullName>Values</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>